AArch64: Fix JNI floating point argument handling

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • b143
    • aarch64

        The jtreg test failure of

        hotspot/test/compiler/floatingpoint/Test15FloatJNIArgs.java

        is caused by incorrect floating point argument handling in JNI native wrapper.

        The following patch:

        http://people.linaro.org/~ningsheng.jian/jni-fix/webrev.00/

        can fix this bug.

        I also updated the test case (and renamed to TestFloatJNIArgs.java),
        which exposes more issues in jni floating point args handling. (Need
        to update the fake bug-id in the test java source, as I don't have
        access right to JBS). Those issues can also be fixed by the patch.

        Could someone please help to review and process the patch?

              Assignee:
              Andrew Dinn
              Reporter:
              Andrew Haley
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: