8165673: AArch64: Fix JNI floating point argument handling Reviewed-by: aph, adinn Contributed-by: ningsheng.jian@linaro.org